--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
     "mustache": "4.2.0",
     "object-hash": "3.0.0",
     "spdx-license-list": "6.6.0",
+    "sync-request": "6.1.0",
     "winston": "3.8.2"
   },
   "devDependencies": {
