--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "build/**/*.d.ts"
   ],
   "workspaces": [
-    "packages/*"
+    "packages/core",
+    "packages/cli"
   ],
   "dependencies": {
     "mustache": "4.2.0"
   },
   "devDependencies": {
-    "@qiwi/multi-semantic-release": "^6.5.1",
+    "@qiwi/multi-semantic-release": "^3.17.1",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/exec": "6.0.3",
@@ -54,9 +55,9 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "27.5.1",
-    "jest-junit": "^13.2.0",
+    "jest-junit": "^13",
     "prettier": "2.7.1",
-    "semantic-release": "^17.4.7",
+    "semantic-release": "^17.4.6",
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
     "typescript": "4.8.4"
