--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
-  "exclude": ["node_modules"],
-  "include": ["packages/**/*.ts", "packages/**/*.ts"],
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src/*.ts",
+    "src/**/*.ts"
+  ],
   "compilerOptions": {
     "outDir": "build",
     "alwaysStrict": true,
@@ -10,7 +15,9 @@
     "experimentalDecorators": true,
     "inlineSourceMap": true,
     "inlineSources": true,
-    "lib": ["esnext"],
+    "lib": [
+      "esnext"
+    ],
     "module": "commonjs",
     "noEmitOnError": false,
     "noFallthroughCasesInSwitch": true,
