--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
+    "tsup": "6.3.0",
     "typescript": "4.8.4"
   },
   "peerDependencies": {
