--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,6 +56,7 @@
     "prettier": "2.7.1",
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
+    "tsup": "6.3.0",
     "typescript": "4.8.4"
   },
   "prettier": {
