--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "stackgen": "npx npx stackgen",
     "yalc": "npx yalc publish",
+    "compile": "tsup ./index.ts",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts ."
   },
@@ -59,6 +60,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
+    "tsup": "6.3.0",
     "typescript": "4.8.4"
   },
   "peerDependencies": {
