--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,7 @@
   "types": "./index.d.ts",
   "scripts": {
     "yalc": "npx yalc publish",
-    "compile": "tsc -p ./tsconfig.json",
+    "compile": "tsup ./index.ts",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts .",
     "test": "jest --passWithNoTests --all"
@@ -56,6 +56,7 @@
     "prettier": "2.7.1",
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
+    "tsup": "6.3.0",
     "typescript": "4.8.4"
   },
   "prettier": {
