--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,6 +43,7 @@
     "prompts": "2.4.2",
     "shell-escape": "0.2.0",
     "ts-node": "10.9.1",
+    "tsx": "3.11.0",
     "typescript": "4.8.4",
     "yargs": "17.6.0"
   },
