--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,8 +6,8 @@
     "name": "Justin McCormick",
     "email": "me@justinmccormick.com"
   },
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
     "sg": "index.ts",
     "stackgen": "index.ts"
@@ -15,7 +15,7 @@
   "scripts": {
     "stackgen": "npx npx stackgen",
     "yalc": "npx yalc publish",
-    "compile": "tsup ./index.ts",
+    "compile": "tsup --out-dir dist ./index.ts",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts ."
   },
@@ -23,8 +23,8 @@
     "*.ts",
     "**/*.ts",
     "tsconfig.json",
-    "*.d.ts",
-    "**/*.d.ts"
+    "dist/*.d.ts",
+    "dist/**/*.d.ts"
   ],
   "dependencies": {
     "@types/diff": "5.0.2",
