fix: enables type declaration files on build

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "stackgen": "npx npx stackgen",
     "yalc": "npx yalc publish",
-    "compile": "tsup --out-dir dist ./index.ts",
+    "compile": "tsup --dts --out-dir dist ./index.ts",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts ."
   },
