--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.6",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@stackgen/core": "workspace:*",
+    "@stackgen/core": "workspace:packages/core",
     "@types/jest": "29.2.0",
     "@types/mustache": "4.2.1",
     "@types/node": "17.0.45",
