--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
     "yargs": "17.6.0"
   },
   "devDependencies": {
-    "@stackgen/core": "4.0.0",
+    "@stackgen/core": "workspace:packages/core",
     "@types/node": "17.0.45",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
@@ -62,7 +62,7 @@
     "typescript": "4.8.4"
   },
   "peerDependencies": {
-    "@stackgen/core": "4.0.0"
+    "@stackgen/core": "workspace:packages/core"
   },
   "prettier": {
     "printWidth": 140,
