--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,7 +47,7 @@
     "yargs": "17.6.0"
   },
   "devDependencies": {
-    "@stackgen/core": "0.0.1",
+    "@stackgen/core": "workspace:packages/core",
     "@types/node": "17.0.45",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
@@ -64,7 +64,7 @@
     "typescript": "4.8.4"
   },
   "peerDependencies": {
-    "@stackgen/core": "0.0.1"
+    "@stackgen/core": "workspace:packages/core"
   },
   "prettier": {
     "printWidth": 140,
