--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,10 +51,10 @@
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "27.5.1",
+    "jest": "29.2.2",
     "jest-junit": "^13",
     "prettier": "2.7.1",
-    "ts-jest": "27.1.5",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "tsup": "6.3.0",
     "typescript": "4.8.4"
@@ -308,6 +308,10 @@
     ]
   },
   "jest": {
+    "snapshotFormat": {
+      "escapeString": true,
+      "printBasicPrototype": true
+    },
     "clearMocks": true,
     "collectCoverage": true,
     "coverageReporters": [
