--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,8 +42,7 @@
     "ora": "^5.4.1",
     "prompts": "2.4.2",
     "shell-escape": "0.2.0",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.4",
+    "tsx": "3.11.0",
     "yargs": "17.6.0"
   },
   "devDependencies": {
