feat: add stackgen package and fix builds

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "eslint.workingDirectories": [
     "./packages/cli",
-    "./packages/core"
+    "./packages/core",
+    "./packages/stackgen"
   ]
 }
