--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,7 +7,7 @@
     "**/*.ts"
   ],
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist",
     "alwaysStrict": true,
     "declaration": true,
     "noEmit": false,
