--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,8 +17,8 @@
     "stackgen": "npx tsx stackgen",
     "yalc": "npx yalc publish",
     "compile": "tsup --dts --out-dir ./dist ./index.ts",
-    "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
-    "lint": "eslint --ext .ts src"
+    "lint": "eslint --ext .ts src",
+    "clean": "rimraf ./dist"
   },
   "files": [
     "*.ts",
@@ -59,6 +59,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1",
+    "rimraf": "2.7.1",
     "ts-node": "10.9.1",
     "tsup": "6.3.0",
     "typescript": "4.8.4"
