--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -31,6 +31,7 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "stripInternal": true,
-    "target": "ES6"
+    "target": "ES6",
+    "baseUrl": "."
   }
 }
