chore: rm tsup from stackgenrc

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "stackgen": "npx tsx stackgen",
     "yalc": "npx yalc publish",
-    "compile": "tsup --dts --out-dir ./dist ./index.ts",
+    "compile": "tsc -p ./tsconfig.json",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts src"
   },
@@ -60,7 +60,6 @@
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
-    "tsup": "6.3.0",
     "typescript": "4.8.4"
   },
   "peerDependencies": {
