feat: adds tsup (#18)
Co-authored-by: Eelco Wiersma <contact@pagebakers.nl>

--- a/packages/stackgen/package.json
+++ b/packages/stackgen/package.json
@@ -10,7 +10,7 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "compile": "tsup --dts --out-dir ./dist ./index.ts",
+    "compile": "tsup",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts src",
     "test": "jest --passWithNoTests --all"
@@ -42,7 +42,7 @@
     "prettier": "2.7.1",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "tsup": "6.3.0",
+    "tsup": "6.5.0",
     "typescript": "4.8.4"
   },
   "prettier": {
@@ -335,5 +335,12 @@
         }
       ]
     }
+  },
+  "tsup": {
+    "dts": true,
+    "outDir": "./dist",
+    "entry": [
+      "./index.ts"
+    ]
   }
 }
