--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,16 +14,15 @@
     "stackgen": "./dist/index.js"
   },
   "scripts": {
-    "stackgen": "npx tsx stackgen",
+    "stackgen": "tsx src/",
     "yalc": "npx yalc publish",
-    "compile": "tsup --dts --out-dir ./dist ./index.ts",
+    "compile": "tsup",
     "clean": "find . -name \"*.js\" -not -path \"./node_modules/*\" -delete && find . -name \"*.d.ts\" -not -path \"./node_modules/*\" -delete",
     "lint": "eslint --ext .ts src"
   },
   "files": [
-    "*.ts",
-    "**/*.ts",
-    "tsconfig.json",
+    "dist/*.js",
+    "dist/**/*.js",
     "dist/*.d.ts",
     "dist/**/*.d.ts"
   ],
@@ -60,7 +59,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
-    "tsup": "6.3.0",
+    "tsup": "6.5.0",
     "typescript": "4.8.4"
   },
   "peerDependencies": {
@@ -312,6 +311,12 @@
           "import/no-extraneous-dependencies": "off"
         }
       }
+    ]
+  },
+  "tsup": {
+    "outDir": "./dist",
+    "entry": [
+      "./src/index.ts"
     ]
   }
 }
